--- a/02.Assembly QC.md
+++ b/02.Assembly QC.md
@@ -1,4 +1,4 @@
-No assembly is perfect. To assess the quality of a genome assembly, several values can be use:
+No assembly is perfect. To assess the quality of a genome assembly, several values can be used:
 
 - Genome size (close to expectation?)
 - number of contigs
@@ -13,6 +13,19 @@ The coverage can be measured with `bedtools` and a bam-file where genome reads w
 
 ```
 genomeCoverageBed -ibam genome_remapping.bam -g chr-sizes.txt > coverage.txt
+```
+The chromosome size file could look like this:
+```
+Chr_1   3951982
+Chr_2   3683506
+Chr_3   3351453
+Chr_4   2873318
+Chr_5   2822964
+Chr_6   2483831
+Chr_7   2434682
+Chr_8   2299506
+Chr_9   2122865
+Chr_10  2105496
 ```
 
 
