--- a/02.Assembly QC.md
+++ b/02.Assembly QC.md
@@ -14,7 +14,7 @@ The coverage can be measured with `bedtools` and a bam-file where genome reads w
 ```
 genomeCoverageBed -ibam genome_remapping.bam -g chr-sizes.txt > coverage.txt
 ```
-The chromosome size file could look like this:
+The chromosome size file is a simple two-column table like this:
 ```
 Chr_1   3951982
 Chr_2   3683506
