Update 04.b.Geneset comparison via BLAST.md

--- a/04.b.Geneset comparison via BLAST.md
+++ b/04.b.Geneset comparison via BLAST.md
@@ -7,7 +7,7 @@ makeblastdb -in PATH/StSwB9_denovo_.fa -dbtype nucl -out Sctrf_genome -title "Sc
 
 To run the blast, I did the following:
 ```
-/usr/local/bioinfo/src/NCBI_Blast+/ncbi-blast-2.6.0+/bin/blastn -evalue 0.001 -num_alignments 3 -query PATH/1980_CDS.fa -db PATH/to/db/Sctrf_genome -outfmt 7 -out blastn.out -num_threads 8 -negative_gilist Ss-genemodels_vs_St-genome.blastn.negative.out
+/usr/local/bioinfo/src/NCBI_Blast+/ncbi-blast-2.6.0+/bin/blastn -evalue 0.001 -num_alignments 3 -query PATH/1980_CDS.fa -db PATH/to/db/Sctrf_genome -outfmt 7 -out blastn.out -num_threads 8 -negative_gilist blastn.negative.out
 ```
 Settings:
 - `-evalue 0.001` sets the cut-off of the e-value to 0.001, so that only significant hits are returned. Can be more or less stringent. 
@@ -30,4 +30,9 @@ awk '!seen[$0]++' blastn.tmp1.txt | awk '{print $1}' > blastn.tmp2.txt
 And finally, to remove duplicates:
 ```
 awk '!x[$0]++' blastn.tmp2.txt > blastn.hits.list.txt
+```
+
+Voilà! Now, to identify absent genes using the list of hits:
+```
+comm -23 Sscle_gene.list.txt blastn.hits.list.txt > blastn.list-absent.txt
 ```
