--- a/05.GC content.md
+++ b/05.GC content.md
@@ -1,7 +1,10 @@
 It can be informative to determine the GC content of the genome, chromosomes, or of all genes. 
 
+#### GC content calculation
 
-```Unix
+The following script determines the GC content of elements in a fasta file. `fastafile.fa` refers to the input file, `gc.out.txt` is the name of the results file. 
+
+```
 awk ' \
 BEGIN { \
     FS=""; \
