--- a/03.a.Annotation.md
+++ b/03.a.Annotation.md
@@ -1,1 +1,34 @@
 Proper gene annotation of a newly sequenced genome requires automated gene prediction, followed by manual curation. Tools for gene prediction include `augustus`, `MAKER2`, and `BRAKER1`. 
+
+### Gene prediction with `augustus`
+
+   - **training `augustus` with gene models**
+
+*text*
+
+   - ***ab initio* gene prediction**
+
+Using the training database created above, `augustus` can be used to predict gene models *ab initio*.
+```
+augustus --species=ref_species new_genome.fa --extrinsicCfgFile=extrinsic.ref_species.cfg > augustus.abinitio.gff
+```
+This might take a moment to compute. The output is a .gff file containing information about putative gene models. The protein sequences can be extracted with 
+```
+PATH/augustus/augustus-3.2.3/scripts/getAnnoFasta.pl augustus.abinitio.gff
+```
+producing a file `augustus.abinitio.aa` in fasta format. To extract gene and CDS sequences, I used `gff2fasta.pl` from https://github.com/ISUgenomics/common_scripts/blob/master/gff2fasta.pl (save script with an edictor like nano).
+```
+perl PATH/gff2fasta.pl new_genome.fa augustus.abinitio.gff output.prefix
+```
+
+   - **including RNA-Seq for prediction**
+
+This requires a BAM and a WIG file(s) produced by mapping of your RNA-Seq against the new genome with a mapper like `STAR` or `HISAT2`. First, RNA-Seq hints have to be produced. There are many options specified in the manual that should be considered for optimization.
+```
+cat PATH/rnaseq.wig | perl PATH/augustus/augustus-3.2.1/scripts/wig2hints.pl --width=10 --margin=10 --minthresh=2 --minscore=4 --src=W --type=ep --radius=4.5 > rnaseq.track.gff
+```
+Then, we can predict gene models:
+```
+augustus --species=ref_species new_genome.fa --extrinsicCfgFile=extrinsic.ref_species.cfg --hintsfile=hints.rnaseq.ep.gff > augustus.hints.abinitio.gff
+```
+The gene models can be extracted from the .gff as above. 
