--- a/03.a.Annotation.md
+++ b/03.a.Annotation.md
@@ -32,3 +32,13 @@ Then, we can predict gene models:
 augustus --species=ref_species new_genome.fa --extrinsicCfgFile=extrinsic.ref_species.cfg --hintsfile=hints.rnaseq.ep.gff > augustus.hints.abinitio.gff
 ```
 The gene models can be extracted from the .gff as above. 
+
+
+### Gene prediction with `BRAKER1`
+
+   - ***ab initio* gene prediction**
+
+`BRAKER` requires both a reference gene set and RNA-Seq data, and you need to refer to `Genemark`, `bamtools` and `samtools` binaries:
+```
+perl PATH/BRAKER/BRAKER_v1.9/braker.pl --cores=8 --fungus --GENEMARK_PATH=PATH/bin/gm_et_linux_64/gmes_petap --BAMTOOLS_PATH=PATH/bamtools/pezmaster31-bamtools-6708a21/bin --SAMTOOLS_PATH=PATH/samtools/samtools-1.3.2 --overwrite --useexisting --species=ref_species --genome=PATH/new_genome.fa --bam=PATH/sortedByCoord.out.bam
+```
