--- a/03.a.Annotation.md
+++ b/03.a.Annotation.md
@@ -1,4 +1,13 @@
-Proper gene annotation of a newly sequenced genome requires automated gene prediction, followed by manual curation. Tools for gene prediction include `augustus`, `MAKER2`, and `BRAKER1`. 
+Proper gene annotation of a newly sequenced genome requires masking of repetitive elements (transposons), then automated gene prediction, followed by manual curation. Tools for gene prediction include `augustus`, `MAKER2`, and `BRAKER1`. 
+
+### Masking repeats with `repeatmasker`
+
+This step is important to label transposable elements that might mess up the annotation, and additionally can provide information about the nature and distribution of different types of transposons. In the following line, the analysis was done for a fungal species. `RepeatMasker -h` provides a list of all functions. 
+```
+RepeatMasker -species Fungi -small -nolow -gff -dir PATH/repeatmasker PATH/genome.fa
+```
+`-nolow` prevents masking of low complexity and simple repeats, and is optional. `-gff` generates an additional GFF output file, which is important for the manual annotation. `-small` returns masked sequence in lower case (standard is N, other options are available). The output will be a masked.fa fasta file meeting the settings, plus the GFF file, a .out file giving localization and statistics of each repeat, and a .tab file summarizing the results of the masking. 
+
 
 ### Gene prediction with `augustus`
 
@@ -8,7 +17,7 @@ Proper gene annotation of a newly sequenced genome requires automated gene predi
 
    - ***ab initio* gene prediction**
 
-Using the training database created above, `augustus` can be used to predict gene models *ab initio*.
+Using the training database created above, `augustus` can be used to predict gene models *ab initio*. 
 ```
 augustus --species=ref_species new_genome.fa --extrinsicCfgFile=extrinsic.ref_species.cfg > augustus.abinitio.gff
 ```
