--- a/03.a.Annotation.md
+++ b/03.a.Annotation.md
@@ -4,7 +4,7 @@ Proper gene annotation of a newly sequenced genome requires masking of repetitiv
 
 This step is important to label transposable elements that might mess up the annotation, and additionally can provide information about the nature and distribution of different types of transposons. In the following line, the analysis was done for a fungal species. `RepeatMasker -h` provides a list of all functions. 
 ```
-RepeatMasker -species Fungi -small -nolow -gff -dir PATH/repeatmasker PATH/genome.fa
+RepeatMasker -species Fungi -small -nolow -gff -dir PATH-for-RepeatMasker-directory/ PATH/genome.fa
 ```
 `-nolow` prevents masking of low complexity and simple repeats, and is optional. `-gff` generates an additional GFF output file, which is important for the manual annotation. `-small` returns masked sequence in lower case (standard is N, other options are available). The output will be a masked.fa fasta file meeting the settings, plus the GFF file, a .out file giving localization and statistics of each repeat, and a .tab file summarizing the results of the masking. 
 
