--- a/03.a.Annotation.md
+++ b/03.a.Annotation.md
@@ -19,7 +19,7 @@ RepeatMasker -species Fungi -small -nolow -gff -dir PATH-for-RepeatMasker-direct
 
 Using the training database created above, `augustus` can be used to predict gene models *ab initio*. 
 ```
-augustus --species=ref_species new_genome.fa --extrinsicCfgFile=extrinsic.ref_species.cfg > augustus.abinitio.gff
+augustus --species=ref_species new_genome.masked.fa --extrinsicCfgFile=extrinsic.ref_species.cfg > augustus.abinitio.gff
 ```
 This might take a moment to compute. The output is a .gff file containing information about putative gene models. The protein sequences can be extracted with 
 ```
@@ -38,7 +38,7 @@ cat PATH/rnaseq.wig | perl PATH/augustus/augustus-3.2.1/scripts/wig2hints.pl --w
 ```
 Then, we can predict gene models:
 ```
-augustus --species=ref_species new_genome.fa --extrinsicCfgFile=extrinsic.ref_species.cfg --hintsfile=hints.rnaseq.ep.gff > augustus.hints.abinitio.gff
+augustus --species=ref_species new_genome.masked.fa --extrinsicCfgFile=extrinsic.ref_species.cfg --hintsfile=hints.rnaseq.ep.gff > augustus.hints.abinitio.gff
 ```
 The gene models can be extracted from the .gff as above. 
 
@@ -48,6 +48,6 @@ The gene models can be extracted from the .gff as above.
    - ***ab initio* gene prediction**
 
 `BRAKER` requires both a reference gene set and RNA-Seq data, and you need to refer to `Genemark`, `bamtools` and `samtools` binaries:
-```
-perl PATH/BRAKER/BRAKER_v1.9/braker.pl --cores=8 --fungus --GENEMARK_PATH=PATH/bin/gm_et_linux_64/gmes_petap --BAMTOOLS_PATH=PATH/bamtools/pezmaster31-bamtools-6708a21/bin --SAMTOOLS_PATH=PATH/samtools/samtools-1.3.2 --overwrite --useexisting --species=ref_species --genome=PATH/new_genome.fa --bam=PATH/sortedByCoord.out.bam
+```Shell
+perl PATH/BRAKER/BRAKER_v1.9/braker.pl --cores=8 --fungus --GENEMARK_PATH=PATH/bin/gm_et_linux_64/gmes_petap --BAMTOOLS_PATH=PATH/bamtools/pezmaster31-bamtools-6708a21/bin --SAMTOOLS_PATH=PATH/samtools/samtools-1.3.2 --overwrite --useexisting --species=ref_species --genome=PATH/new_genome.masked.fa --bam=PATH/sortedByCoord.out.bam
 ```
