--- a/03.a.Annotation.md
+++ b/03.a.Annotation.md
@@ -48,6 +48,6 @@ The gene models can be extracted from the .gff as above.
    - ***ab initio* gene prediction**
 
 `BRAKER` requires both a reference gene set and RNA-Seq data, and you need to refer to `Genemark`, `bamtools` and `samtools` binaries:
-```Shell
+```ShellSession
 perl PATH/BRAKER/BRAKER_v1.9/braker.pl --cores=8 --fungus --GENEMARK_PATH=PATH/bin/gm_et_linux_64/gmes_petap --BAMTOOLS_PATH=PATH/bamtools/pezmaster31-bamtools-6708a21/bin --SAMTOOLS_PATH=PATH/samtools/samtools-1.3.2 --overwrite --useexisting --species=ref_species --genome=PATH/new_genome.masked.fa --bam=PATH/sortedByCoord.out.bam
 ```
