--- a/03.a.Annotation.md
+++ b/03.a.Annotation.md
@@ -11,7 +11,33 @@ RepeatMasker -species Fungi -small -nolow -gff -dir PATH-for-RepeatMasker-direct
 
 ### Gene prediction with `augustus`
 
+A pretty extensive tutorial on the usage of `augustus` can be found here: http://bioinf.uni-greifswald.de/augustus/binaries/tutorial/. Most `perl`-scripts are provided in the scripts/ folder of `augustus`. 
+
    - **training `augustus` with gene models**
+
+Assuming that good gene annotation of a close relative is present, we can start training `augustus`. First, I generated a GeneBank file from the GFF containing the gene annotations, and produce a random training set of 100 genes, `ref_species.genes.gb.test`, and a training set `ref_species.genes.gb.train` excluding these genes:
+```ShellSession
+PATH/gff2gbSmallDNA.pl ref_species.annotation.gff ref_species.genes.gb
+PATH/randomSplit.pl ref_species.genes.gb 100
+```
+Then, I generated a species file `ref_species`:
+```ShellSession
+PATH/new_species.pl --species=ref_species
+```
+The output file `ref_species_parameters.cfg` can be set to include protein and codingseq information, hints from RNA-Seq and UTR prediction. 
+Next, an initial round of training can be done.
+```ShellSession
+etraining --species=ref_species ref_species.genes.gb.train
+```
+This updates the species file. Next, a first test is done with the gb.test file from above:
+```ShellSession
+augustus --species=ref_species ref_species.genes.gb.test | tee firsttest.out
+```
+The result of this test can be read with the command below, where TP shows the number of correctly predicted genes, FN false negaties, FP false positives, sensitivity the percentage of correctly predicted exons, and specificity the percentage of exons exactly as in test set.
+```
+grep -A 22 Evaluation firsttest.out
+```
+
 
 *text*
 
@@ -25,7 +51,7 @@ This might take a moment to compute. The output is a .gff file containing inform
 ```ShellSession
 PATH/augustus/augustus-3.2.3/scripts/getAnnoFasta.pl augustus.abinitio.gff
 ```
-producing a file `augustus.abinitio.aa` in fasta format. To extract gene and CDS sequences, I used `gff2fasta.pl` from https://github.com/ISUgenomics/common_scripts/blob/master/gff2fasta.pl (save script with an edictor like nano).
+producing a file `augustus.abinitio.aa` in fasta format. To extract gene and CDS sequences, I used `gff2fasta.pl` from https://github.com/ISUgenomics/common_scripts/blob/master/gff2fasta.pl (save script with an editor like nano).
 ```ShellSession
 perl PATH/gff2fasta.pl new_genome.fa augustus.abinitio.gff output.prefix
 ```
