--- a/03.a.Annotation.md
+++ b/03.a.Annotation.md
@@ -17,12 +17,12 @@ A pretty extensive tutorial on the usage of `augustus` can be found here: http:/
 
 Assuming that good gene annotation of a close relative is present, we can start training `augustus`. First, I generated a GeneBank file from the GFF containing the gene annotations, and produce a random training set of 100 genes, `ref_species.genes.gb.test`, and a training set `ref_species.genes.gb.train` excluding these genes:
 ```ShellSession
-PATH/gff2gbSmallDNA.pl ref_species.annotation.gff ref_species.genes.gb
-PATH/randomSplit.pl ref_species.genes.gb 100
+perl PATH/gff2gbSmallDNA.pl ref_species.annotation.gff ref_species.genes.gb;
+perl PATH/randomSplit.pl ref_species.genes.gb 100
 ```
 Then, I generated a species file `ref_species`:
 ```ShellSession
-PATH/new_species.pl --species=ref_species
+perl PATH/new_species.pl --species=ref_species
 ```
 The output file `ref_species_parameters.cfg` can be set to include protein and codingseq information, hints from RNA-Seq and UTR prediction. 
 Next, an initial round of training can be done.
@@ -34,12 +34,15 @@ This updates the species file. Next, a first test is done with the gb.test file 
 augustus --species=ref_species ref_species.genes.gb.test | tee firsttest.out
 ```
 The result of this test can be read with the command below, where TP shows the number of correctly predicted genes, FN false negaties, FP false positives, sensitivity the percentage of correctly predicted exons, and specificity the percentage of exons exactly as in test set.
-```
+```ShellSession
 grep -A 22 Evaluation firsttest.out
 ```
+Next, we run the following lines to optimize prediction accuracy of `augustus`, and then re-train the program with `etraining` followed by testing the accuracy as above:
+```ShellSession
+optimize_augustus.pl --species=ref_species ref_species.genes.gb.train #may take a long time
+```
+This should be done several times until the accuracy does not improve significantly any more. 
 
-
-*text*
 
    - ***ab initio* gene prediction**
 
@@ -49,7 +52,7 @@ augustus --species=ref_species new_genome.masked.fa --extrinsicCfgFile=extrinsic
 ```
 This might take a moment to compute. The output is a .gff file containing information about putative gene models. The protein sequences can be extracted with 
 ```ShellSession
-PATH/augustus/augustus-3.2.3/scripts/getAnnoFasta.pl augustus.abinitio.gff
+perl PATH/augustus/augustus-3.2.3/scripts/getAnnoFasta.pl augustus.abinitio.gff
 ```
 producing a file `augustus.abinitio.aa` in fasta format. To extract gene and CDS sequences, I used `gff2fasta.pl` from https://github.com/ISUgenomics/common_scripts/blob/master/gff2fasta.pl (save script with an editor like nano).
 ```ShellSession
