--- a/03.a.Annotation.md
+++ b/03.a.Annotation.md
@@ -65,9 +65,13 @@ This requires a BAM and a WIG file(s) produced by mapping of your RNA-Seq agains
 ```ShellSession
 cat PATH/rnaseq.wig | perl PATH/augustus/augustus-3.2.1/scripts/wig2hints.pl --width=10 --margin=10 --minthresh=2 --minscore=4 --src=W --type=ep --radius=4.5 > rnaseq.track.gff
 ```
+This script generates the file `extrinsic.new_species.cfg`, which can be adjusted (see manual for details!). For example, in the line exonpart, the last number can be set as bonus (>1) if the gene model is supported by the RNA-Seq data.
+```Text
+exonpart        1     .997  M    1  1e+100  E 1    1  W 1    1.05
+```
 Then, we can predict gene models:
 ```ShellSession
-augustus --species=ref_species new_genome.masked.fa --extrinsicCfgFile=extrinsic.ref_species.cfg --hintsfile=hints.rnaseq.ep.gff > augustus.hints.abinitio.gff
+augustus --species=ref_species new_genome.masked.fa --extrinsicCfgFile=extrinsic.new_species.cfg --hintsfile=hints.rnaseq.ep.gff > augustus.hints.abinitio.gff
 ```
 The gene models can be extracted from the .gff as above. 
 
