--- a/03.a.Annotation.md
+++ b/03.a.Annotation.md
@@ -58,6 +58,10 @@ producing a file `augustus.abinitio.aa` in fasta format. To extract gene and CDS
 ```ShellSession
 perl PATH/gff2fasta.pl new_genome.fa augustus.abinitio.gff output.prefix
 ```
+Alternatively, the `gffread` package from `cufflinks` does the job:
+```ShellSession
+gffread augustus.abinitio.gff -g new_genome.fa -w transcripts.fasta -y peptides.fasta
+```
 
    - **including RNA-Seq for prediction**
 
