--- a/03.a.Annotation.md
+++ b/03.a.Annotation.md
@@ -15,6 +15,12 @@ A pretty extensive tutorial on the usage of `augustus` can be found here: http:/
 
    - **training `augustus` with gene models**
 
+**Note**: On the genotoul server, the following lines have to be run to activate the `augustus` module:
+```ShellSession
+module load compiler/gcc-4.9.1;
+export AUGUSTUS_CONFIG_PATH=/usr/local/bioinfo/src/augustus/augustus-3.2.3/config/
+```
+
 Assuming that good gene annotation of a close relative is present, we can start training `augustus`. First, I generated a GeneBank file from the GFF containing the gene annotations, and produce a random training set of 100 genes, `ref_species.genes.gb.test`, and a training set `ref_species.genes.gb.train` excluding these genes:
 ```ShellSession
 perl PATH/gff2gbSmallDNA.pl ref_species.annotation.gff ref_species.genes.gb;
@@ -39,7 +45,7 @@ grep -A 22 Evaluation firsttest.out
 ```
 Next, we run the following lines to optimize prediction accuracy of `augustus`, and then re-train the program with `etraining` followed by testing the accuracy as above:
 ```ShellSession
-optimize_augustus.pl --species=ref_species ref_species.genes.gb.train #may take a long time
+optimize_augustus.pl --species=ref_species ref_species.genes.gb.train #takes a long time
 ```
 This should be done several times until the accuracy does not improve significantly any more. 
 
