--- a/02.Assembly QC.md
+++ b/02.Assembly QC.md
@@ -35,7 +35,11 @@ Both CEGMA and BUSCO estimate completeness by searching for the presence and com
 ```
 cegma --genome new.genome.fa -o out.file -threads 8
 ```
-BUSCO is a python script. `-o` sets the prefix of the output files, `-i` defines the input (genome fasta file), `-l` refers to the reference genome set (here, eukaryota for conserved eurkaryotic genes), `-m` is the input type. 
+BUSCO is a python script. `--out` sets the prefix of the output files, `--in` defines the input (genome fasta file), `--lineage` refers to the reference genome set (here, Ascomycota for conserved fungal genes), `-m` is the input type. 
 ```
-python /usr/local/bioinfo/src/BUSCO/BUSCO_V3/busco/scripts/run_BUSCO.py -o out.file_ -i PATH/new.genome.fa -l /usr/local/bioinfo/src/BUSCO/BUSCO_v1.1b1/eukaryota/ -m genome
+# to load the modules (genotoul server)
+source /usr/local/bioinfo/src/BUSCO/BUSCO_V3/busco_v3_env/bin/activate;
+module load bioinfo/BUSCO_v3;
+# to run the script
+python /usr/local/bioinfo/src/BUSCO/BUSCO_V3/busco/scripts/run_BUSCO.py -f --out out.file_ --in new.genome.fa --lineage /usr/local/bioinfo/src/BUSCO/datasets/ascomycota_odb9/ -m genome
 ```
