--- a/02.Assembly QC.md
+++ b/02.Assembly QC.md
@@ -11,7 +11,7 @@ No assembly is perfect. To assess the quality of a genome assembly, several valu
 
 The coverage can be measured with `bedtools` and a bam-file where genome reads were re-mapped to the assembly. Another file contains contig or chromosome sizes, using the same contig/chromosome names as the bam-file. 
 
-```
+```ShellSession
 genomeCoverageBed -ibam genome_remapping.bam -g chr-sizes.txt > coverage.txt
 ```
 The chromosome size file is a simple two-column table like this:
@@ -32,11 +32,11 @@ Chr_10  2105496
 #### Assessing completeness with CEGMA and BUSCO
 
 Both CEGMA and BUSCO estimate completeness by searching for the presence and completeness of highly conserved gene sets. CEGMA tests the genome fasta file against a protein database.
-```
+```ShellSession
 cegma --genome new.genome.fa -o out.file -threads 8
 ```
 BUSCO is a python script. `--out` sets the prefix of the output files, `--in` defines the input (genome fasta file), `--lineage` refers to the reference genome set (here, Ascomycota for conserved fungal genes), `-m` is the input type. 
-```
+```ShellSession
 # to load the modules (genotoul server)
 source /usr/local/bioinfo/src/BUSCO/BUSCO_V3/busco_v3_env/bin/activate;
 module load bioinfo/BUSCO_v3;
