--- a/03.b.Functional annotation.md
+++ b/03.b.Functional annotation.md
@@ -1,4 +1,4 @@
-After generating the set of genes, functional annotation is in order, including prediction of PFAM, gene ontology, secretion peptide, and transmembrane domains. 
+After generating the gene set, functional annotation is in order, including prediction of PFAM, gene ontology, secretion peptide, and transmembrane domains. 
 
 #### PFAM
 
@@ -6,12 +6,12 @@ After generating the set of genes, functional annotation is in order, including 
 
 #### Gene Ontology
 
-*text*
+I used **blast2go** for GO annotation, integrating InterProScan, BLAST and PFAM information to generate annotation files. 
 
 #### Signal peptide
 
 Signal peptides can be predicted using `SignalP`. The script is simple:
-```
+```ShellSession
 PATH/signalp -t euk -f short PATH/proteins.fasta > SigP4.out
 ```
 
@@ -20,6 +20,6 @@ PATH/signalp -t euk -f short PATH/proteins.fasta > SigP4.out
 #### Transmembrane domains
 
 One tool for this is `TMHMM`. 
-```
+```ShellSession
 PATH/tmhmm PATH/proteins.fasta > TMHMM.out
 ```
