--- a/05.GC content.md
+++ b/05.GC content.md
@@ -4,7 +4,7 @@ It can be informative to determine the GC content of the genome, chromosomes, or
 
 The following script determines the GC content of elements in a fasta file. `fastafile.fa` refers to the input file, `gc.out.txt` is the name of the results file. 
 
-```
+```ShellSession
 awk ' \
 BEGIN { \
     FS=""; \
