--- a/03.b.Functional annotation.md
+++ b/03.b.Functional annotation.md
@@ -2,7 +2,16 @@ After generating the gene set, functional annotation is in order, including pred
 
 #### PFAM
 
-*text* 
+For PFAM annotations, I used `hmmscan` against the full database downloaded from the xfam page. To download the databank and create the `hmmscan` file:
+```ShellSession
+wget ftp://ftp.ebi.ac.uk/pub/databases/Pfam/current_release/Pfam-A.hmm.gz;
+gunzip Pfam-A.hmm.gz;
+hmmpress Pfam-A.hmm
+```
+And to run the scan against the query sequences:
+```ShellSession
+hmmscan --tblout pfam-table.txt Pfam-A.hmm proteins.fasta
+```
 
 #### Gene Ontology
 
