--- a/06.MUMmer-synteny.md
+++ b/06.MUMmer-synteny.md
@@ -3,7 +3,7 @@ An important part of comparative genome analysis is **synteny**. I used `MUMmer`
 #this module is required to run MUMmer on the genotoul
 module load compiler/gcc-6.1.0;
 #the actual MUMmer script - here nucmer for somewhat similar multi-fasta files
-/usr/local/bioinfo/src/MUMmer/current/nucmer -p prefix_output PATH/reference_genome.fasta new_genome.fasta
+nucmer -p prefix_output PATH/reference_genome.fasta new_genome.fasta
 ```
 
 The output will be a `.delta` file. It may be useful to run the script also for each chromosome of the reference, depending how many contigs the new genome has. To make the `.delta` files readable, I use the following lines:
