--- a/02.Assembly QC.md
+++ b/02.Assembly QC.md
@@ -7,6 +7,15 @@ No assembly is perfect. To assess the quality of a genome assembly, several valu
 - completeness
 
 
+#### Re-mapping long reads
+
+It can be useful to re-map long reads from PacBio or nanopore to assess the coverage of contigs. `bwa` is a tool that allows this:
+```ShellSession
+bwa index ref.fa
+bwa mem -x pacbio ref.fa pacbio.fq > aln.sam
+bwa mem -x ont2d ref.fa ont-2D.fq > aln.sam
+```
+
 #### Genome coverage
 
 The coverage can be measured with `bedtools` and a bam-file where genome reads were re-mapped to the assembly. Another file contains contig or chromosome sizes, using the same contig/chromosome names as the bam-file. 
