--- a/03.a.Annotation.md
+++ b/03.a.Annotation.md
@@ -60,7 +60,7 @@ This might take a moment to compute. The output is a .gff file containing inform
 ```ShellSession
 perl PATH/augustus/augustus-3.2.3/scripts/getAnnoFasta.pl augustus.abinitio.gff
 ```
-producing a file `augustus.abinitio.aa` in fasta format. To extract gene and CDS sequences, I used `gff2fasta.pl` from https://github.com/ISUgenomics/common_scripts/blob/master/gff2fasta.pl (save script with an editor like nano).
+producing a file `augustus.abinitio.aa` in fasta format. To extract gene and CDS sequences, I used `gff2fasta.pl` from https://github.com/ISUgenomics/common_scripts/blob/master/gff2fasta.pl (save script with an editor like `nano`).
 ```ShellSession
 perl PATH/gff2fasta.pl new_genome.fa augustus.abinitio.gff output.prefix
 ```
