Update and rename 01.Assembly.md to 01.Genome-Assembly.md

--- a/01.Genome-Assembly.md
+++ b/01.Genome-Assembly.md
@@ -1,22 +1,18 @@
 ### Long read assembly
-
+# Assembly with `Canu`
 Using long read sequencing data such as PacBio or nanopore in combination with high coverage illumina shot-gun sequencing for correction yields useful genome assemblies. For the first assembly, I use `Canu`, which allows to input sequencing data from different sources (PacBio, nanopore, BAC clones). 
 
 ```ShellSession
-#on genotoul, run these lines first
-module load bioinfo/Java8;
-module load compiler/gcc-6.1.0;
-
-#the script I used for nanopore (on genotoul)
-/usr/local/bioinfo/src/canu/canu-1.6/Linux-amd64/bin/canu -java=/tools/java/jre1.8.0_45/bin/java -p ./prefix_of_genome -d /PATH-to-genome-folder/ genomeSize=40m gridEngineThreadsOption='-pe parallel_smp THREADS' maxMemory=64G maxThreads=8 -nanopore-raw nanopore-run.fastq
+export HOME=/home/sk893857 #setting up home directory
+canu -java=/tools/java/jre1.8.0_45/bin/java -p ./MySu_canu-v0 -d $HOME/genomes/Msulcatula genomeSize=40m gridEngineThreadsOption='--cpus-per-task=THREADS' maxMemory=120G maxThreads=8 -nanopore-raw 20171213_mysul-G10-S00.fastq.gz
 ```
-
+# Polish the assembly with `Pilon`
 Then, the assembly should be polished using Illumina shot-gun sequencing data. First, the reads should be mapped to the new assembly and a sorted bam-file created with `samtools`. For polishing, I use `Pilon`.
 ```ShellSession
-java -Xmx8G -jar /usr/local/bioinfo/src/pilon/pilon-1.22.jar --genome canu_contigs.fasta --frags illumina-reads.bam --output canu_contigs.pilon.fa
+java -Xmx8G -jar $HOME/miniconda3/bin/pilon-1.22.jar --genome MySu_canu-v0_contigs.fasta --frags illumina-reads.bam --output canu_contigs.pilon.fa
 ```
 
-Three rounds of polishing (and re-mapping of the Illumina reads to the polished versions) are usually sufficient, more rounds do not significantly improve the assembly any more. 
+In case of *Myriosclerotinia sulcatula*, I performed three rounds of polishing (including re-mapping of the Illumina reads to the polished versions), more rounds did not significantly improve the assembly any more. 
 
 
 ### Short read assembly
