--- a/01.Genome-Assembly.md
+++ b/01.Genome-Assembly.md
@@ -8,6 +8,20 @@ canu -java=/tools/java/jre1.8.0_45/bin/java -p ./MySu_canu-v0 -d $HOME/genomes/M
 ```
 #### Polish the assembly with `Pilon`
 Then, the assembly should be polished using Illumina shot-gun sequencing data. First, the reads should be mapped to the new assembly and a sorted bam-file created with `samtools`. For polishing, I use `Pilon`.
+1 - I trimmed the Illumina reads using `Trimmomatic0.36`.
+```ShellSession
+
+```
+2 - I mapped the reads onto the draft assembly with `HISAT2`.
+```ShellSession
+hisat2-build MySu_canu-v0_contigs.fasta MySu_canu-v0_index
+hisat2 -p 8 ----no-spliced-alignment -k 10 -x MySu_canu-v0_index -1 HZE11_R1_trim.fq.gz -2 HZE11_R2_trim.fq.gz -S MySu_canu-v0.HZE11-map.sam
+```
+3 - Parsing the BAM file. 
+```ShellSession
+
+```
+4 - I polished the assembly with `Pilon`.
 ```ShellSession
 java -Xmx8G -jar $HOME/miniconda3/bin/pilon-1.22.jar --genome MySu_canu-v0_contigs.fasta --frags illumina-reads.bam --output canu_contigs.pilon.fa
 ```
