Update and rename 02.Assembly QC.md to 02.Assembly Quality Control.md

--- a/02.Assembly Quality Control.md
+++ b/02.Assembly Quality Control.md
@@ -1,11 +1,28 @@
-No assembly is perfect. To assess the quality of a genome assembly, several values can be used:
+No assembly is perfect. To assess the quality of a genome assembly, several values can be assessed:
 
 - Genome size (close to expectation?)
 - number of contigs
-- N50 as measure of median contig size
+- N50/N90 as measure of median contig size
 - coverage
 - completeness
 
+#### Genome statistics
+For a quick overview over some genome statistics, I used `assembly-stats`:
+```ShellSession
+assembly-stats Mysul_MySu01_v1.fa
+```
+The output includes N50, N90, and other size stats: 
+```
+sum = 43533135, n = 24, ave = 1813880.62, largest = 5732858
+N50 = 2649720, n = 6
+N60 = 2389439, n = 8
+N70 = 2109168, n = 10
+N80 = 1913538, n = 12
+N90 = 1133061, n = 15
+N100 = 13241, n = 24
+N_count = 0
+Gaps = 0
+```
 
 #### Re-mapping long reads
 
