Update 02.Assembly Quality Control.md

--- a/02.Assembly Quality Control.md
+++ b/02.Assembly Quality Control.md
@@ -25,13 +25,22 @@ Gaps = 0
 ```
 
 #### Re-mapping long reads
-
 It can be useful to re-map long reads from PacBio or nanopore to assess the coverage of contigs. `bwa` is a tool that allows this:
 ```ShellSession
-bwa index ref.fa
-bwa mem -x pacbio ref.fa pacbio.fq > aln.sam
-bwa mem -x ont2d ref.fa ont-2D.fq > aln.sam
+bwa index Mysul_MySu01_v1.fa
+bwa mem -x ont2d Mysul_MySu01_v1.fa 20171213_mysul-G10-S00.fastq.gz > align-nanopore.sam
+samtools sort -l 0 -o align-nanopore.bam -O bam align-nanopore.sam #create the BAM file
+samtools view -F 0x04 -b align-nanopore.bam > align-nanopore.aligned.bam #clean up BAM file from non-mapping reads
 ```
+
+#### BLASTN against NCBI nt database
+Using `NCBI BLAST+ 2.7` and the latest version of the NCBI nucleotide collection database nt, I aligned the contigs against the known nucleotide sequences. This can help identify contigs of other origin (contaminant, viruses, mitochondrial genome). 
+```ShellSession
+blastn -task megablast -query Mysul_MySu01_v1.fa -db $HOME/blastdb/nt -outfmt '6 qseqid staxids bitscore std sscinames sskingdoms stitle' -culling_limit 5 -num_threads 32 -evalue 1e-25 -out MySu01_v1.blast-nt.tbl
+```
+
+#### Visualizing data with `Blobtools`
+
 
 #### Genome coverage
 
@@ -39,19 +48,6 @@ The coverage can be measured with `bedtools` and a bam-file where genome reads w
 
 ```ShellSession
 genomeCoverageBed -ibam genome_remapping.bam -g chr-sizes.txt > coverage.txt
-```
-The chromosome size file is a simple two-column table like this:
-```
-Chr_1   3951982
-Chr_2   3683506
-Chr_3   3351453
-Chr_4   2873318
-Chr_5   2822964
-Chr_6   2483831
-Chr_7   2434682
-Chr_8   2299506
-Chr_9   2122865
-Chr_10  2105496
 ```
 
 
