Update 02.Assembly Quality Control.md

--- a/02.Assembly Quality Control.md
+++ b/02.Assembly Quality Control.md
@@ -40,7 +40,15 @@ blastn -task megablast -query Mysul_MySu01_v1.fa -db $HOME/blastdb/nt -outfmt '6
 ```
 
 #### Visualizing data with `Blobtools`
+`Blobtools` is a very useful tool to summarize and visualize BLAST-nt and coverage data, and helps rapidly identify contaminant contigs. The putative identity of contigs can be generated on the levels of superkingdom, class, phylum, family, and genus.
+```ShellSession
+blobtools create -i Mysul_MySu01_v1.fa -b align-nanopore.aligned.bam -t MySu01_v1.blast-nt.tbl -o blobfile --db $HOME/miniconda3/opt/blobtools-1.0.1/data/nodesDB.txt #creates the JSON file
+blobtools blobplot -i blobfile.blobDB.json -o MySu01_plot -r family --format pdf #to visualize as PDF
+blobtools view -i blobfile.blobDB.json -r family -o MySu01_table #the table helps to inspect statistics (coverage, identity, GC content) of contigs
+```
 
+The plot looks like this:
+![blobplot_mysul](https://github.com/stefankusch/Genome.assembly-Myriosclerotinia/blob/master/Mysul_MySu01_v1_blobtools_family.Mysul_MySu01_v1_blobtools.blobDB.json.bestsum.family.p7.span.100.blobplot.bam0.pdf)
 
 #### Genome coverage
 
