--- a/03.Genome Completeness.md
+++ b/03.Genome Completeness.md
@@ -1,7 +1,7 @@
 A very useful measure of genome quality is to use `BUSCO v3`. This algorithm searches for core conserved gene sets of lineages to assess the completeness of a given genome or proteome.  
 
 ```ShellSession
-
+python $HOME/miniconda3/bin/BUSCO.py -f --out MySu01_v1.busco --in Mysul_MySu01_v1.fa --lineage ~/database/BUSCO/ascomycota_odb9 -m genome
 ```
 
 The summary output of `BUSCO` reveals the number of complete, fragmented, duplicated, and missing core genes of the selected lineage, here ascomycota_odb9.
